agora sim foi alterada a imagem

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <img
         id="bio__imgclaudio"
         src="img/claudio.jpg"
-        alt="Foto Dr. Claudio Trezub"
+        alt="Foto Dr. Claudio Trezub com um terno elegante"
       />
       <div id="bio__corner1"></div>
 
